refactor: clean up code formatting and improve consistency across files

--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite --host",
-    "build": "vite build",
+    "dev": "npm run watch-routes && vite --host",
+    "build": "npm run generate-routes && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "generate-routes": "tsr generate",
+    "watch-routes": "tsr watch",
+    "format": "prettier --write ."
   },
   "dependencies": {
     "@react-three/drei": "^9.115.0",
@@ -28,7 +31,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
-    "@tanstack/router-cli": "^1.99.0",
+    "@tanstack/router-cli": "^1.101.2",
     "@tanstack/router-devtools": "^1.99.0",
     "@tanstack/router-plugin": "^1.99.0",
     "@types/react": "^18.3.10",
