--- a/package.json
+++ b/package.json
@@ -4,13 +4,12 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite ",
+    "dev": "vite --host",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "generate-routes": "tsr generate",
-    "watch-routes": "tsr watch",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "favicons": "node scripts/favicons.js"
   },
   "dependencies": {
     "framer-motion": "^11.18.2",
@@ -36,8 +35,11 @@
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^15.15.0",
     "postcss": "^8.5.3",
+    "sharp": "^0.34.1",
     "tailwindcss": "^3.4.17",
-    "vite": "^5.4.18"
+    "vite": "^5.4.18",
+    "vite-plugin-pwa": "^1.0.0",
+    "workbox-window": "^7.3.0"
   },
   "description": "This template provides a minimal setup to get React working in Vite with HMR and some ESLint rules.",
   "main": "eslint.config.js",
