--- a/package.json
+++ b/package.json
@@ -25,10 +25,10 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.25.1",
+    "@tailwindcss/postcss": "^4.1.11",
     "@types/react": "^18.3.20",
     "@types/react-dom": "^18.3.6",
     "@vitejs/plugin-react": "^4.4.1",
-    "autoprefixer": "^10.4.21",
     "eslint": "^9.25.1",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
@@ -36,7 +36,7 @@
     "globals": "^15.15.0",
     "postcss": "^8.5.3",
     "sharp": "^0.34.1",
-    "tailwindcss": "^3.4.17",
+    "tailwindcss": "^4.1.11",
     "vite": "^5.4.18",
     "vite-plugin-pwa": "^1.0.0",
     "workbox-window": "^7.3.0"
