--- a/package.json
+++ b/package.json
@@ -11,20 +11,21 @@
     "favicons": "node scripts/favicons.js"
   },
   "dependencies": {
-    "next": "15.4.6",
     "lucide-react": "^0.447.0",
+    "motion": "^12.23.12",
+    "next": "15.4.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4"
+    "tailwindcss": "^4",
+    "typescript": "^5"
   },
   "description": "This template provides a minimal setup to get React working in Vite with HMR and some ESLint rules.",
   "main": "eslint.config.js",
