--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,7 +33,8 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    "app/ui/Button.jsx"
+    "app/ui/Button.jsx",
+    "app/page.jsx"
   ],
   "exclude": [
     "node_modules"
