--- a/package.json
+++ b/package.json
@@ -11,19 +11,28 @@
     "favicons": "node scripts/favicons.js"
   },
   "dependencies": {
+    "@mdx-js/loader": "^3.1.0",
+    "@mdx-js/react": "^3.1.0",
+    "@next/mdx": "^15.4.6",
+    "@types/mdx": "^2.0.13",
+    "clsx": "^2.1.1",
     "lucide-react": "^0.447.0",
     "motion": "^12.23.12",
     "next": "15.4.6",
+    "next-mdx-remote-client": "^2.1.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.5.2",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "sugar-high": "^0.9.3",
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "eslint-config-next": "15.4.6",
     "tailwindcss": "^4",
     "typescript": "^5"
   },
