--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@mdx-js/react": "^3.1.0",
     "@next/mdx": "^15.4.6",
     "@types/mdx": "^2.0.13",
+    "axios": "^1.12.1",
+    "cheerio": "^1.1.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.447.0",
