--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,7 +33,7 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    "app/ui/Button.jsx",
+    "app/components/ui/Button.jsx",
     "app/page.jsx"
   ],
   "exclude": [
